# os

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: rust.yml
src/: gdt.rs  interrupts.rs  lib.rs  main.rs  serial.rs  vga_buffer.rs
tests/: basic_boot.rs  stack_overflow.rs
