[package]
name = "os"
version = "0.1.0"
edition = "2018"

[dependencies]
bootloader = "0.9"
volatile = "0.2.6"
spin = "0.9.8"
x86_64 = "0.15.1"
uart_16550 = "0.3.1"

[dependencies.lazy_static]
version = "1.5.0"
features = ["spin_no_std"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[package.metadata.bootimage]
test-args = [
	"-device",
	"isa-debug-exit,iobase=0xf4,iosize=0x04",
	"-serial",
	"stdio",
	"-display",
	"none",
]
test-success-exit-code = 33

[[test]]
name = "should_panic"
harness = false
